# YOLO-Label-Detector

./: .gitignore  .pre-commit-config.yaml  1.md  README.md  dataset.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: dataset.yaml
configs/export/: default.yaml
configs/infer/: default.yaml
configs/logging/: mlflow.yaml
configs/postprocess/: default.yaml
configs/preprocess/: base.yaml
configs/train/: yolov8n.yaml
examples/: prod_inference_example.py
src/yolo_label_detector/: __init__.py  export.py  infer.py  train.py
